# PandoraLauncher

./: Cargo.toml
.github/workflows/: build.yml  cd.yml
crates/auth/: Cargo.toml
crates/auth/src/: secret.rs  serve_redirect.rs
crates/backend/: Cargo.toml
crates/backend/src/: backend.rs  backend_filesystem.rs  backend_handler.rs  instance.rs  launch.rs  log_reader.rs
crates/bridge/src/: handle.rs  message.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: interface_config.rs  lib.rs  png_render_cache.rs  root.rs  ui.rs
crates/frontend/src/entity/: mod.rs
crates/frontend/src/modals/: mod.rs  settings.rs
crates/frontend/src/pages/: instances_page.rs
crates/frontend/src/pages/instance/: instance_page.rs
crates/pandora_launcher/: Cargo.toml  build.rs
crates/pandora_launcher/src/: main.rs
crates/schema/src/: forge.rs  maven.rs  version.rs
scripts/: build_mac.sh  build_windows.sh
