[workspace]
resolver = "3"
members = ["crates/backend", "crates/bridge", "crates/reqwest_client", "crates/frontend", "crates/pandora_launcher", "crates/nbt", "crates/schema", "crates/auth"]

default-members = ["crates/pandora_launcher"]

[workspace.package]
edition = "2024"

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1
# Enable for more accurate flamegraphs
# debug = true

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
auth = { path = "crates/auth" }
backend = { path = "crates/backend" }
bridge = { path = "crates/bridge" }
frontend = { path = "crates/frontend" }
schema = { path = "crates/schema" }
nbt = { path = "crates/nbt" }
reqwest_client = { path = "crates/reqwest_client" }

anyhow = "1.0.100"
atomic-time = "0.1.5"
atomic_enum = "0.3.0"
backtrace = "0.3.76"
byteorder = "1.5.0"
bytes = "1.10.1"
cesu8 = "1.1.0"
chrono = { version = "0.4.42", features = ["serde"] }
directories = "6.0.0"
flate2 = "1.1.5"
ftree = { path = "crates/ftree"}
futures = "0.3.31"
gpui = "0.2.2"
gpui-component = { git = "https://github.com/Moulberry/gpui-component.git", rev = "6525ac151af1bdd3f294f89b0ec2c259abbe73c4" }
hex = { version = "0.4.3", features = ["serde"] }
image = "0.25.8"
indexmap = { version = "2.12.0", features = ["serde"] }
lexical-sort = "0.3.1"
lru = "0.16.2"
mini-moka = "0.10.3"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
num = "0.4.3"
once_cell = "1.21.3"
os_info = "3.12.0"
paste = "1.0.15"
quick-xml = "0.38.3"
rand = "0.8.5"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "stream"] }
rust-embed = "8.7.2"
rustc-hash = "2.1.1"
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["rc", "alloc", "derive"] }
serde-untagged = "0.1.9"
serde_json = "1.0.145"
sha1 = "0.10.6"
slab = "0.4.11"
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ustr = { version = "1.1.0", features = ["serde"] }
zip = "6.0.0"
base64 = "0.22.1"
cvlib = "0.1.2"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
p256 = "0.13.2"
base64ct = "1.8.0"
sha2 = "0.10.9"
url = "2.5.7"
nt-time = { version = "0.12.1", features = ["chrono"] }
obfstr = "0.4.4"
uuid = "1.18.1"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
xmlparser = "0.13.6"
heapless = "0.9.1"
intrusive-collections = "0.9.7"
tokio-util = "0.7.17"
enumset = "1.1.10"
serde_with = "3.15.1"
typed-path = "0.12.0"
parking_lot = { version = "0.12.5", features = ["deadlock_detection"] }
lzma-rs = "0.3.0"
httparse = "1.10.1"
