[package]
name = "auth"
version = "0.1.0"
edition.workspace = true

[dependencies]
reqwest.workspace = true
cvlib.workspace = true
oauth2.workspace = true
p256.workspace = true
base64ct.workspace = true
chrono.workspace = true
serde.workspace = true
sha2.workspace = true
rand.workspace = true
thiserror.workspace = true
serde_json.workspace = true
url.workspace = true
nt-time.workspace = true
anyhow.workspace = true
uuid.workspace = true
keyring.workspace = true
obfstr.workspace = true
tokio.workspace = true
tokio-util.workspace = true
httparse.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
oo7 = { version = "0.5.0", default-features = false, features = ["native_crypto", "async-std"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Security_Credentials"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.5.1"
security-framework-sys = "2.15.0"