[package]
name = "frontend"
version = "0.1.0"
edition.workspace = true

[dependencies]
backtrace.workspace = true
chrono.workspace = true
ftree.workspace = true
gpui.workspace = true
gpui-component.workspace = true
image.workspace = true
lexical-sort.workspace = true
lru.workspace = true
rust-embed.workspace = true
rustc-hash.workspace = true
sanitize-filename.workspace = true
anyhow.workspace = true
bridge.workspace = true
schema.workspace = true
tokio.workspace = true
once_cell.workspace = true
ustr.workspace = true
indexmap.workspace = true
heapless.workspace = true
slab.workspace = true
intrusive-collections.workspace = true
atomic-time.workspace = true
reqwest_client.workspace = true
uuid.workspace = true
enumset.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true

rust-i18n = "3.1.5"
